Stream file line by line Add generic exception handling Remove unused dependencies